force-app/main/default/objects/Relationship__c/Relationship__c.object-meta.xml
<CustomObject>
    <label>Relationship</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>RelationID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>