force-app/main/default/objects/Relationship__c/fields/Broker_Office__c.field-meta.xml
<CustomField>
    <fullName>Broker_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>