force-app/main/default/objects/Relationship__c/fields/Broker_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Broker_Office_Code__c</fullName>
    <description>Used for sending outbound messages that include the broker code.</description>
    <formula>Broker_Office__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Office Code</label>
    <type>Text</type>
</CustomField>