force-app/main/default/objects/Relationship__c/fields/Created_Source__c.field-meta.xml
<CustomField>
    <fullName>Created_Source__c</fullName>
    <description>Whether QP created this role</description>
    <label>Created Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>