force-app/main/default/objects/Relationship__c/fields/External_Broker_Office__c.field-meta.xml
<CustomField>
    <fullName>External_Broker_Office__c</fullName>
    <label>External Broker Office</label>
    <length>50</length>
    <type>Text</type>
</CustomField>