force-app/main/default/objects/Relationship__c/fields/External_Contact__c.field-meta.xml
<CustomField>
    <fullName>External_Contact__c</fullName>
    <label>External Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>