force-app/main/default/objects/Relationship__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>