force-app/main/default/objects/Relationship__c/fields/External_Personal_Assistant__c.field-meta.xml
<CustomField>
    <fullName>External_Personal_Assistant__c</fullName>
    <label>External Personal Assistant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>