force-app/main/default/objects/Relationship__c/fields/External_Personal_Assistant_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Personal_Assistant_Sub_ID__c</fullName>
    <label>External Personal Assistant Sub ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>