force-app/main/default/objects/Relationship__c/fields/External_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>External_Related_Account__c</fullName>
    <label>External Related Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>