force-app/main/default/objects/Relationship__c/fields/Personal_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Personal_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (Personal Assistant)</relationshipLabel>
    <relationshipName>Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>