force-app/main/default/objects/Relationship__c/fields/Personal_Assistant_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Assistant_Sub_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Assistant Sub ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Relationships (Personal Assistant Sub ID)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>