force-app/main/default/objects/Relationship__c/fields/PrismRelationshipID__c.field-meta.xml
<CustomField>
    <fullName>PrismRelationshipID__c</fullName>
    <label>PrismRelationshipID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>