force-app/main/default/objects/Relationship__c/fields/Relationship_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Start_Date__c</fullName>
    <label>Relationship Start Date</label>
    <type>DateTime</type>
</CustomField>