force-app/main/default/objects/Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Assistant To</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Association Member</fullName>
            </value>
            <value>
                <fullName>Association Member Primary</fullName>
            </value>
            <value>
                <fullName>Authorized Signer</fullName>
            </value>
            <value>
                <fullName>Branch Office</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Broker Office</fullName>
            </value>
            <value>
                <fullName>Broker Of Record</fullName>
            </value>
            <value>
                <fullName>Broker Of Record - Branch Office</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Company Office</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Office</fullName>
            </value>
            <value>
                <fullName>Data Provider</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>franchiser none</fullName>
            </value>
            <value>
                <fullName>Franchisor</fullName>
            </value>
            <value>
                <fullName>Has Assistant</fullName>
            </value>
            <value>
                <fullName>Merged from</fullName>
            </value>
            <value>
                <fullName>Merged to</fullName>
            </value>
            <value>
                <fullName>MLS</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Office Manager</fullName>
            </value>
            <value>
                <fullName>propertymanagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>