force-app/main/default/objects/Relationship__c/fields/Resend_to_LMS_Flag__c.field-meta.xml
<CustomField>
    <fullName>Resend_to_LMS_Flag__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Resend to LMS Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>