force-app/main/default/objects/Relationship__c/fields/Service_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Service_Jurisdiction__c</fullName>
    <formula>TEXT(Subscription__r.Service_Jurisdiction__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Jurisdiction</label>
    <type>Text</type>
</CustomField>