force-app/main/default/objects/Relationship__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <description>Used to create outbound messages that contain the subscriber ID.</description>
    <formula>Subscription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription ID</label>
    <type>Text</type>
</CustomField>