force-app/main/default/objects/Relationship__c/fields/Subscription_Office__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Office__c</fullName>
    <formula>Subscription_ID__c +&apos; - &apos;+ Broker_Office_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription-Office</label>
    <type>Text</type>
</CustomField>