force-app/main/default/objects/Relationship__c/fields/Subscription_Private_Email__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Private_Email__c</fullName>
    <label>Subscription Private Email</label>
    <type>Email</type>
</CustomField>