force-app/main/default/objects/Relationship__c/fields/Super_Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Super_Parent_Account_Id__c</fullName>
    <label>Super Parent Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>