force-app/main/default/objects/Relationship__c/fields/SysPrRoleKey__c.field-meta.xml
<CustomField>
    <fullName>SysPrRoleKey__c</fullName>
    <externalId>true</externalId>
    <label>BRIGHT SysPrRoleKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>