force-app/main/default/objects/Relationship__c/recordTypes/Individual_to_Office.recordType-meta.xml
<RecordType>
    <fullName>Individual_to_Office</fullName>
    <active>true</active>
    <label>Individual to Office</label>
</RecordType>