force-app/main/default/objects/Relationship__c/recordTypes/Office_to_Office.recordType-meta.xml
<RecordType>
    <fullName>Office_to_Office</fullName>
    <active>true</active>
    <label>Office to Office</label>
</RecordType>