force-app/main/default/objects/Relationship__c/validationRules/End_Date_Not_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Not_in_Future</fullName>
    <active>false</active>
    <errorConditionFormula>Relationship_End_Date__c &gt; TODAY()
&amp;&amp; NOT( $Setup.Bypass_Validation_rules__c.Disable_Validation_Rules__c )</errorConditionFormula>
    <errorDisplayField>Relationship_End_Date__c</errorDisplayField>
    <errorMessage>The Relationship End Date cannot be in the future.</errorMessage>
</ValidationRule>