force-app/main/default/objects/Relationship__c/validationRules/Realtionshiptypestate_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Realtionshiptypestate_Validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Relationship_Type__c,  &apos;Responsible Broker&apos;),     ISBLANK(TEXT(State__c)  ))</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Please enter the value</errorMessage>
</ValidationRule>