force-app/main/default/objects/Relationship__c/validationRules/Relationship_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_type</fullName>
    <active>false</active>
    <description>prevent changing relationship type after save</description>
    <errorConditionFormula>ISCHANGED(Relationship_Type__c) &amp;&amp;
NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Relationship Type cannot be changed after save. 
Please use delete, then add as new.</errorMessage>
</ValidationRule>