force-app/main/default/objects/Relationship__c/listViews/BOR_s.listView-meta.xml
<ListView>
    <fullName>BOR_s</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Broker_Office_Code__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Broker_Office__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Relationship_End_Date__c</columns>
    <columns>Relationship_Start_Date__c</columns>
    <columns>Service_Jurisdiction__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Relationship_Type__c</field>
        <operation>equals</operation>
        <value>Broker Of Record</value>
    </filters>
    <label>BOR&apos;s</label>
</ListView>